# dgdm-histopath-lab

./: .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  FINAL_AUTONOMOUS_SDLC_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_DEPLOYMENT_GUIDE.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION.md  PROJECT_CHARTER.md  QUANTUM_ENHANCEMENT_SUMMARY.md  README.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  docker-compose.yml  environment.yml  opencv_headless_check.py  pyproject.toml  pytest.ini  requirements.txt  setup_environment.py  test_enhanced_implementation.py  test_generation1_complete.py  test_generation2_robust.py  test_generation3_scale.py  validate_comprehensive_implementation.py  validate_generation2_robust.py  validate_generation3_scale.py  validate_implementation.py  validate_quality_gates.py
.github/workflows/: ci.yml
configs/: dgdm_base.yaml  dgdm_large.yaml
deploy/: deploy.sh  production_deployment.yaml
deployment/: Dockerfile  README.md  deployment_report.json  entrypoint.sh  healthcheck.py  monitoring.yaml  production_config.yaml
dgdm_histopath/: __init__.py
dgdm_histopath/cli/: __init__.py  predict.py  preprocess.py  quality_gates.py  train.py
dgdm_histopath/clinical/: fda_validation.py  pacs_integration.py
dgdm_histopath/core/: __init__.py  attention.py  diffusion.py  graph_layers.py
dgdm_histopath/data/: __init__.py  datamodule.py  dataset.py
dgdm_histopath/deployment/: edge_deployment.py  edge_optimization.py  production_orchestration.py  production_orchestrator.py  production_ready.py
dgdm_histopath/enterprise/: multi_tenant.py
dgdm_histopath/evaluation/: __init__.py  metrics.py  predictor.py  visualizer.py
dgdm_histopath/models/: __init__.py  decoders.py  dgdm_model.py  encoders.py
dgdm_histopath/preprocessing/: __init__.py  slide_processor.py  stain_normalization.py  tissue_detection.py  tissue_graph_builder.py
dgdm_histopath/quantum/: __init__.py  federated_learning.py  quantum_distributed.py  quantum_hardware.py  quantum_optimizer.py  quantum_planner.py  quantum_safety.py  quantum_scheduler.py
dgdm_histopath/research/: __init__.py  adversarial_robustness.py  comparative_studies.py  experiment_framework.py  interpretability_framework.py  multimodal_fusion.py  novel_algorithms.py
dgdm_histopath/testing/: autonomous_quality_framework.py  autonomous_quality_gates.py  comprehensive_test_framework.py  monitoring_health_checks.py  progressive_quality_gates.py  quality_gates.py  robust_quality_runner.py  robust_validators.py  scalable_quality_gates.py  test_suite.py
dgdm_histopath/training/: __init__.py  losses.py  trainer.py
dgdm_histopath/utils/: __init__.py  advanced_monitoring.py  auto_scaling.py  comprehensive_monitoring.py  comprehensive_validation.py  config.py  data_optimization.py  dependency_check.py  distributed_processing.py  enhanced_error_handling.py  enterprise_security.py  exceptions.py  globalization.py  intelligent_scaling.py  logging.py  monitoring.py  optimization.py  performance.py  performance_optimization.py  resilience.py  resilient_training.py  robust_environment.py  robust_error_handling.py  scaling.py  security.py  validation.py  validators.py
docs/: ROADMAP.md
docs/adr/: 0000-template.md  0001-graph-neural-network-architecture.md
examples/: basic_usage.py  basic_usage_simple.py
kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml
logs/: error_log.json
scripts/: train_tcga.py
tests/: test_basic.py  test_performance_benchmarks.py  test_progressive_quality_gates.py  test_quantum_integration.py  test_security_validation.py
